# ytm

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/ytm/: __init__.py  __main__.py  cli.py  config.py
src/ytm/auth/: oauth.py
src/ytm/commands/: backup.py  delete.py  empty.py  history.py  list_cmd.py  prune.py  restore.py
src/ytm/core/: browser.py  database.py  youtube_api.py  youtube_ytdlp.py
src/ytm/models/: __init__.py  playlist.py  video.py
